syntax = "proto3";

package hades.api.registry.v1;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option go_package = "gen/api/registry/v1";

enum ModuleVisibility {
  MODULE_VISIBILITY_UNSPECIFIED = 0;
  MODULE_VISIBILITY_PUBLIC = 1;
  MODULE_VISIBILITY_PRIVATE = 2;
}

enum ModuleState {
  MODULE_STATE_UNSPECIFIED = 0;
  MODULE_STATE_ACTIVE = 1;
  MODULE_STATE_DEPRECATED = 2;
}

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_ORGANIZATION = 1;
  USER_TYPE_USER = 2;
}

enum UserState {
  USER_STATE_UNSPECIFIED = 0;
  USER_STATE_ACTIVE = 1;
  USER_STATE_DEACTIVATED = 2;
}

message User {
  string id = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
  string username = 4;
  string email = 5;
  string password = 6;
  UserType type = 7;
  UserState state = 8;
  string description = 9;
  string url = 10;
}

message CreateUserRequest {
  string username = 1 [(buf.validate.field).required = true];
  string email = 2 [(buf.validate.field).required = true];
  string password = 3 [(buf.validate.field).required = true];
  string description = 4;
}

message CreateUserResponse {
  User user = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

